# django-appointments

./: README.md
demo-project/: requirements.txt
demo-project/demo/: settings.py  urls.py
django-appointments/: LICENSE  MANIFEST.in  requirements.txt  setup.cfg  setup.py
django-appointments/django_appointments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django-appointments/doctor/: data.json  models.py  urls.py  views.py
django-appointments/doctor/static/js/: doctor.js
django-appointments/doctor/templates/: doctor_profile.html  loginmail.html
django-appointments/hospital/: models.py  urls.py  views.py
django-appointments/hospital/static/js/: form.js
django-appointments/hospital/templates/: confirmation_mail.html  hospital_edit.html  hospital_profile.html
django-appointments/patient/: models.py  urls.py  views.py
django-appointments/patient/static/js/: select2.min.js  view.js
django-appointments/patient/templates/: change_password.html  patient_edit.html  patient_profile.html
django-appointments/user/: admin.py  models.py  urls.py  views.py
django-appointments/user/static/css/: main.css
django-appointments/user/static/js/: main.js
django-appointments/user/templates/: base.html  login.html  mail.html  password_reset_confirm.html  password_reset_form.html  signup.html
